# weather-agent-mcp

./: .gitignore  README.md  pyproject.toml  test.sh
.github/workflows/: code-quality.yml  scanoss.yml
agent/: main.py
mcp_server/: server.py
